@@ -20,6 +20,9 @@ Version 0.7.5 UNRELEASED
       now show version comparison operators.  There was a mistake in the
       variable to print (dependency type rather than operator).
 
+  * [cmdline] Show packages that will not be upgraded with verbose>0
+    (Closes: #553577)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
